# ProjectZero

./: .dockerignore  .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: aws.yml  deploy-development.yml  deploy-staging-ec2.yml  deploy-staging-ecs.yml  deploy-staging.yml  deploy.yml  docker-image.yml  pylint.yml
backend/: .pylintrc
backend/apps/core/: apps.py
backend/apps/core/db/: __init__.py  custom_db_functions.py
backend/apps/core/managament/commands/: wait_for_db.py
backend/apps/core/management/commands/: wait_for_db.py
backend/apps/core/middleware/: healthcheck.py  sql_profiler.py
backend/apps/core/tests/: test_anymail.py  test_healthcheck.py
backend/apps/core/utils/: __init__.py  anymail.py  simple_jwt_utils.py
backend/apps/fixtures/: user.json
backend/apps/user/: admin.py  apps.py  auth_views.py  exceptions.py  models.py  serializers.py  social_auth_views.py  urls.py  views.py
backend/apps/user/fixtures/: social-auth.json  user.json
backend/apps/user/migrations/: 0001_initial.py
backend/apps/user/tests/: test_admin.py  test_models.py  test_user_admin.py  test_user_api.py  test_user_models.py
backend/config/: asgi.py  urls.py
backend/config/settings/: base.py  development.py  production.py  staging.py
docker/: Dockerfile  dev.Dockerfile  docker-compose-dev.yml  docker-compose-development.yml  docker-compose-local.yml  docker-compose-staging.yml  staging.Dockerfile
env_files/: example.env
nginx/dev/: Dockerfile  default.conf
nginx/dev/conf/: default.conf
scripts/: dev.entrypoint.sh  entrypoint.sh  staging.entrypoint.sh
terraform/dev/: deploy.tpl  main.tf  variables.tf
terraform/stage/: main.tf  variables.tf
terraform/stage/ec2/: main.tf  variables.tf
terraform/stage/ecs/: main.tf
tutorials/: dev-aws-ui.md  dev-terraform.md  staging-ec2-terraform.md
